自动化打版本

--- a/LPAutoPackage/Info.plist
+++ b/LPAutoPackage/Info.plist
@@ -17,7 +17,9 @@
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>20180831.01</string>
+	<key>CURRENT_CONFIGURATION</key>
+	<string>90001</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
